--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -92,9 +92,8 @@
                                     data
                                     without
                                     ever seeing the contents. It could
-                                    help us reap the full benefits of big data, from fighting financial fraud to
-                                    catching
-                                    diseases... || <a href="technology2.html">continue reading ></a></p>
+                                    help us reap the full benefits of big data, from fighting financial... || <a
+                                        href="technology2.html">continue reading ></a></p>
                             </div>
                         </td>
                         <td>
@@ -122,82 +121,65 @@
                                     off into the cold, dark underbelly of
                                     the Thwaites Glacier.
 
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                    Boaty McBoatface, the comically ... || <a href="technology4.html">continue reading
+                                        ></a></p>
                             </div>
                         </td>
                         <td>
                             <div class="table-spacing-3">
-                                <h3>Boaty McBoatface’s new mission is more...</h3>
-                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
-                                    as
-                                    it
-                                    heads
-                                    off into the cold, dark underbelly of
-                                    the Thwaites Glacier.
-
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                <h3>Samsung Galaxy Buds 2 PRO</h3>
+                                <p class="featured-body-text">T It's no secret: Samsung is holding a Galaxy Unpacked
+                                    event on August 10 – aka the big stage the tech giant
+                                    traditionally likes to tread when revealing its latest devices and wearables. And as
+                                    it happens... || <a href="technology5.html">continue
+                                        reading ></a></p>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div class="table-spacing-2">
-                                <h3>Boaty McBoatface’s new mission is more...</h3>
-                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
-                                    as
-                                    it
-                                    heads
-                                    off into the cold, dark underbelly of
-                                    the Thwaites Glacier.
+                                <h3>Chess robot breaks seven-year-old boy's finger...</h3>
+                                <p class="featured-body-text">A robot broke a seven-year-old boy's finger during a chess
+                                    match in Moscow last week, Russian news outlets
+                                    report.
 
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                    "The robot broke the child's finger," Sergey Lazarev, Moscow Chess Federation... ||
+                                    <a href="technology6.html">continue reading ></a>
+                                </p>
                             </div>
                         </td>
                         <td>
                             <div class="table-spacing-3">
-                                <h3>Boaty McBoatface’s new mission is more...</h3>
-                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
-                                    as
-                                    it
-                                    heads
-                                    off into the cold, dark underbelly of
-                                    the Thwaites Glacier.
-
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                <h3>Nothing Phone 1 review</h3>
+                                <p class="featured-body-text">So, you recently got the Nothing phone (1) and are done
+                                    admiring the brilliant design of the phone. You’re
+                                    ready to make the most off the smartphone and enable all of its best features.
+                                    However... || <a href="technology7.html">continue
+                                        reading ></a></p>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div class="table-spacing-2">
-                                <h3>Boaty McBoatface’s new mission is more...</h3>
-                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
-                                    as
-                                    it
-                                    heads
-                                    off into the cold, dark underbelly of
-                                    the Thwaites Glacier.
-
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                <h3>Your Address and Other Personal Info Are a Search...</h3>
+                                <p class="featured-body-text"> Data that personally identifies you can pop up on Google
+                                    and other sites, but with some basic steps and a
+                                    little persistence, you can hide or remove a lot of it.
+                                    When you type your name into a search... || <a href="technology8.html">continue
+                                        reading ></a></p>
                             </div>
                         </td>
                         <td>
                             <div class="table-spacing-3">
-                                <h3>Boaty McBoatface’s new mission is more...</h3>
-                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
-                                    as
-                                    it
-                                    heads
-                                    off into the cold, dark underbelly of
-                                    the Thwaites Glacier.
+                                <h3>Nintendo Switch OLED</h3>
+                                <p class="featured-body-text"> I'm going to make this absolutely simple for you: The
+                                    Switch OLED is the best Nintendo Switch there is,
+                                    period. But your kids aren't going to care. Or, at least, mine didn't.
 
-                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                        href="technology4.html">continue reading ></a></p>
+                                    I learned this the hard way when... || <a href="technology9.html">continue reading
+                                        ></a></p>
                             </div>
                         </td>
                     </tr>
